--- a/WebContent/Html/01_html_structure.html
+++ b/WebContent/Html/01_html_structure.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta charset="EUC-KR">
+	<meta charset="UTF-8">
 	<title>Insert title here</title>
 	</head>
 	
-	<!-- ºê¶ó¿ìÀú¿¡ ·£´õ¸µ µÇ´Â ºÎºÐÀ» ÀÛ¼º -->
+	<!-- ë¸Œë¼ìš°ì €ì— ëžœë”ë§ ë˜ëŠ” ë¶€ë¶„ì„ ìž‘ì„± -->
 	<body>
 		<h4>01_html_structure.html</h4>
 		<hr />
@@ -15,8 +15,8 @@
 	
 		<a href="http://www.naver.com">This is a link</a>
 		<br />
-		<!-- ¾ïÁö·Î °³ÇàÇÏ°í ½ÍÀ» °æ¿ì¿¡ -->
-		<img src="../common/image/Desert.jpg" alt="»ç¸·" width="200" height="100">
+		<!-- ì–µì§€ë¡œ ê°œí–‰í•˜ê³  ì‹¶ì„ ê²½ìš°ì— -->
+		<img src="../common/image/Desert.jpg" alt="ì‚¬ë§‰" width="200" height="100">
 		<br />
 	
 		<button>Click me</button>
