--- a/WebContent/Html/02_block_inline.html
+++ b/WebContent/Html/02_block_inline.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
+<meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
@@ -20,8 +20,8 @@
 	<span style="border: 1px solid black">Hello World</span>
 	<span style="border: 1px solid black">Hello World</span>
 	
-	<a style="border: 1px solid black" href ="http://www.naver.com">³×ÀÌ¹ö</a>
-	<a style="border: 1px solid black" href ="http://www.daum.net">´ÙÀ½</a>
+	<a style="border: 1px solid black" href ="http://www.naver.com">ë„¤ì´ë²„</a>
+	<a style="border: 1px solid black" href ="http://www.daum.net">ë‹¤ìŒ</a>
 	
 	<img src="../common/image/Desert.jpg" width="100" height="50"/>
 	<img src="../common/image/Lighthouse.jpg" width="100" height="50"/>
