--- a/WebContent/Html/03_css.html
+++ b/WebContent/Html/03_css.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<meta charset="EUC-KR">
+	<meta charset="UTF-8">
 	<title>Insert title here</title>
 	
 	<!-- Internal style sheet -->
@@ -36,7 +36,7 @@
 	</style>
 	
 	<!-- External Style Sheet -->
-	<!-- href °æ·Î¿¡ µé¾îÀÖ´Â cssÆÄÀÏ -->
+	<!-- href ê²½ë¡œì— ë“¤ì–´ìˆëŠ” cssíŒŒì¼ -->
 	<link rel="stylesheet" type="text/css" href="../common/css/style.css">
 	
 	</head>
