--- a/WebContent/Html/05_layout.html
+++ b/WebContent/Html/05_layout.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="EUC-KR">
+		<meta charset="UTF-8">
 		<title>Insert title here</title>
-		<!-- * Àº ¸ğµç ÅÂ±×¸¦ ÀÇ¹ÌÇÑ´Ù. ºê¶ó¿ìÀúÀÇ ¿©¹éÀ» ¾ø¾Ö±â À§ÇØ ÀÛ¼ºÇßÀ½ -->
+		<!-- * ì€ ëª¨ë“  íƒœê·¸ë¥¼ ì˜ë¯¸í•œë‹¤. ë¸Œë¼ìš°ì €ì˜ ì—¬ë°±ì„ ì—†ì• ê¸° ìœ„í•´ ì‘ì„±í–ˆìŒ -->
 		<style type="text/css">
 			* { 
 				margin:0px;
@@ -12,7 +12,7 @@
 			
 			#wapper {
 				width:800px;
-				margin:auto; /*¸¶ÁøÀ» ¾ó¸¸Å­ ÁÙÁö´Â ¸ğ¸£°ÚÁö¸¸ ÁÂ¿ì·Î ¶È°°ÀÌ ÁÖ°Ú´Ù.*/
+				margin:auto; /*ë§ˆì§„ì„ ì–¼ë§Œí¼ ì¤„ì§€ëŠ” ëª¨ë¥´ê² ì§€ë§Œ ì¢Œìš°ë¡œ ë˜‘ê°™ì´ ì£¼ê² ë‹¤.*/
 			}
 			
 			#header {
