--- a/WebContent/Html/04_layout.html
+++ b/WebContent/Html/04_layout.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="EUC-KR">
+		<meta charset="UTF-8">
 		<title>Insert title here</title>
-		<!-- * Àº ¸ğµç ÅÂ±×¸¦ ÀÇ¹ÌÇÑ´Ù. ºê¶ó¿ìÀúÀÇ ¿©¹éÀ» ¾ø¾Ö±â À§ÇØ ÀÛ¼ºÇßÀ½ -->
+		<!-- * ì€ ëª¨ë“  íƒœê·¸ë¥¼ ì˜ë¯¸í•œë‹¤. ë¸Œë¼ìš°ì €ì˜ ì—¬ë°±ì„ ì—†ì• ê¸° ìœ„í•´ ì‘ì„±í–ˆìŒ -->
 		<style type="text/css">
 			* { 
 				margin:0px;
@@ -12,7 +12,7 @@
 			
 			#wapper {
 				width:800px;
-				margin:auto; /*¸¶ÁøÀ» ¾ó¸¸Å­ ÁÙÁö´Â ¸ğ¸£°ÚÁö¸¸ ÁÂ¿ì·Î ¶È°°ÀÌ ÁÖ°Ú´Ù.*/
+				margin:auto; /*ë§ˆì§„ì„ ì–¼ë§Œí¼ ì¤„ì§€ëŠ” ëª¨ë¥´ê² ì§€ë§Œ ì¢Œìš°ë¡œ ë˜‘ê°™ì´ ì£¼ê² ë‹¤.*/
 			}
 			
 			#header {
@@ -24,8 +24,8 @@
 				padding-left:10px;
 				border:1px solid black;
 				height:300px;
-				display:flex; /*flexÀÏ °æ¿ì¿¡*/
-				flex-direction:row; /*Çà¹æÇâÀ¸·Î ¹º°¡¸¦ Ãß°¡¸¦ ÇÏ°Ú´Ù.*/
+				display:flex; /*flexì¼ ê²½ìš°ì—*/
+				flex-direction:row; /*í–‰ë°©í–¥ìœ¼ë¡œ ë­”ê°€ë¥¼ ì¶”ê°€ë¥¼ í•˜ê² ë‹¤.*/
 			}
 			#footer {
 				border:1px solid black;
